--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "Khuram",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.7.5",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.1",
     "morgan": "^1.9.1",
     "save": "^2.3.3"
